[gd_scene load_steps=14 format=3 uid="uid://eou4mq5n6oh3"]

[ext_resource type="Script" uid="uid://dhnso5msyby6y" path="res://Tower/tower.gd" id="1_vedim"]
[ext_resource type="Texture2D" uid="uid://66nv1i1gfu4s" path="res://Tower/TowerSprites/tower_defense_01_d.png" id="2_fe3rl"]
[ext_resource type="Script" uid="uid://dgk8wi0c4aep0" path="res://Tower/tower_sprite_parts.gd" id="2_nrwet"]
[ext_resource type="Shader" uid="uid://ce1mx5xoqq8iy" path="res://Tower/tower-lvlup.gdshader" id="2_okia5"]
[ext_resource type="Script" uid="uid://c2ptdtafpswnv" path="res://Tower/tower_level_stars.gd" id="4_jnpw3"]
[ext_resource type="Script" uid="uid://gxomawtqif3c" path="res://Tower/tower_sprite_part.gd" id="4_nrwet"]
[ext_resource type="Texture2D" uid="uid://dyya37emvk4b0" path="res://Tower/TowerSprites/level_star.png" id="5_rt5j0"]
[ext_resource type="Texture2D" uid="uid://g77a4lilbx0a" path="res://Tower/TowerSprites/level_star_hat.png" id="6_rt5j0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e70sp"]
shader = ExtResource("2_okia5")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 1.8
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_stebd"]
resource_local_to_scene = true
radius = 219.67

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rt5j0"]
bg_color = Color(0, 0.7163037, 0.3955693, 1)
shadow_size = 5

[sub_resource type="Theme" id="Theme_fe3rl"]
ProgressBar/styles/fill = SubResource("StyleBoxFlat_rt5j0")

[sub_resource type="CircleShape2D" id="CircleShape2D_vedim"]
radius = 46.0

[node name="Tower" type="Node2D"]
script = ExtResource("1_vedim")

[node name="TowerSpriteParts" type="Node2D" parent="."]
script = ExtResource("2_nrwet")

[node name="TowerSpritePart" type="Sprite2D" parent="TowerSpriteParts"]
texture_filter = 1
position = Vector2(-10.999999, -3.9999998)
scale = Vector2(1.0630183, 1.0630183)
texture = ExtResource("2_fe3rl")
hframes = 9
vframes = 8
frame = 57
region_enabled = true
region_rect = Rect2(0, 0, 288, 256)
script = ExtResource("4_nrwet")

[node name="TowerSpritePart2" type="Sprite2D" parent="TowerSpriteParts"]
texture_filter = 1
position = Vector2(13.999997, -3)
scale = Vector2(1.0630183, 1.0630183)
texture = ExtResource("2_fe3rl")
hframes = 9
vframes = 8
frame = 3
region_enabled = true
region_rect = Rect2(0, 0, 288, 256)
script = ExtResource("4_nrwet")

[node name="TowerSpritePart3" type="Sprite2D" parent="TowerSpriteParts"]
texture_filter = 1
position = Vector2(14.000001, -19)
scale = Vector2(1.0630183, 1.0630183)
texture = ExtResource("2_fe3rl")
hframes = 9
vframes = 8
frame = 3
region_enabled = true
region_rect = Rect2(0, 0, 288, 256)
script = ExtResource("4_nrwet")

[node name="LvlUpShaderSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.78431374)
material = SubResource("ShaderMaterial_e70sp")
scale = Vector2(0.225, 0.225)

[node name="VisionArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
collision_mask = 2

[node name="VisionShape" type="CollisionShape2D" parent="VisionArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_stebd")

[node name="GainXPDisplay" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -56.0
offset_top = -79.0
offset_right = 57.0
offset_bottom = -47.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPLevelProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -39.0
offset_top = -31.0
offset_right = -32.0
offset_bottom = 32.0
theme = SubResource("Theme_fe3rl")
fill_mode = 3
show_percentage = false

[node name="Footprint" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="FootprintShape" type="CollisionShape2D" parent="Footprint"]
unique_name_in_owner = true
position = Vector2(-2, 6)
shape = SubResource("CircleShape2D_vedim")

[node name="TowerLevelStars" type="VBoxContainer" parent="."]
offset_left = 37.0
offset_top = -42.0
offset_right = 52.0
offset_bottom = 8.0
mouse_filter = 2
script = ExtResource("4_jnpw3")
star_texture = ExtResource("5_rt5j0")
hat_after_max_stars = ExtResource("6_rt5j0")
